[package]
name = "flash_loan_cpi_interface"
description = "Created with Anchor"
authors = ["Rohan Kapur <kapurrohan56@gmail.com>"]
version = "0.2.2"
edition = "2018"
description = "Anchor CPI client for the lending programs"

[lib]
crate-type = ["cdylib", "lib"]
name = "flash_loan_cpi_interface"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.2"
spl-token-lending = { git = "https://github.com/solendprotocol/solana-program-library", version = "0.1.0", features = ["no-entrypoint"] }

